Add ENTITY-MIB inventory and transactional SNMP SET
